# agent-ssh

./: .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Package.swift  README.md  SECURITY.md  Security_Patch_Monitor.md  Security_Patch_Monitor_Implementation_Plan.md  TOOLS.md  build.rs  competitors.md  deny.toml  doit.sh  justfile  project.yml  read_only_server_doctor.md  read_only_server_doctor_implementation_plan.md  shellfisch_catchup.md  termiusCatchUp.md
.github/: copilot-instructions.md
.opencode/: opencode.jsonc
AgentSshApp/: ActivityLogStore.swift  AdvancedAuthenticationStore.swift  AdvancedAuthenticationView.swift  AgentPanel.swift  AgentSsh.entitlements  AgentSshApp.swift  AgentTriageStore.swift  AppDelegate.swift  AppleFoundationModelsDoctorProvider.swift  BridgeManager+PortForwarding.swift  BridgeManager+SecurityPatchMonitor.swift  BridgeManager+ServerDoctor.swift  BridgeManager+Tools.swift  BridgeManager.swift  CloudServerManagementView.swift  CloudServerTokenStore.swift  CommandPaletteView.swift  ConnectionConfidenceView.swift  ConnectionEditView.swift  ConnectionStoreManager.swift  ConnectionWorldMapView.swift  ContentView.swift  CrashReporter.swift  CredentialResolver.swift  DiagnosticsBundle.swift  DirectServerCopy.swift  DockerModels.swift  DockerMonitorView+Actions.swift  DockerMonitorView+AssetsEvents.swift  DockerMonitorView+Disk.swift  DockerMonitorView.swift  DualPaneFileBrowserView.swift  EntitlementsStore.swift  FileBrowserView.swift  FileDiffReviewSheet.swift  FileEditView+WritingTools.swift  FilesPanel.swift  (+96 more)
(+192 files in other folders)
