[package]
name = "agent-ssh"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Native macOS / iPadOS agent-ssh app — Rust core used via FFI from Swift."
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "agent_ssh"

# Bind generation entry point. Run via:
#   cargo run --release --bin uniffi-bindgen -- \
#       generate --library target/release/libagent_ssh.dylib \
#       --language swift --out-dir bindings
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
# Full SSH/SFTP/FTP + Postgres client — keeps the default feature set.
ssh-commander-core = "0.2.2"
ssh-commander-pg-parquet = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
uniffi = { version = "0.28", features = ["cli"] }
shell-escape = "0.1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"

# Distributed inside the .app bundle — optimize for size and speed.
# `strip = "debuginfo"` keeps symbol names for crash-report symbolication.
[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
